# agent-system-assignment

./: .gitignore  CMakeLists.txt  package.xml
launch/: go2_inference_athletic.launch  go2_inference_shorttrack.launch
project/: go2_athletic.cnoid  go2_shorttrack.cnoid  ros_tank_tutorial.cnoid
src/: CMakeLists.txt  Go2RosController.cpp  RttTankController.cpp
